--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,11 @@
             <version>8.0.11</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.21</version>
+        </dependency>
 
     </dependencies>
 
