--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
             <version>1.7.21</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.3m</version>
+        </dependency>
+
     </dependencies>
 
 </project>
